Starting 180101, no more patches

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,34 +1,39 @@
+mg3a (180101-1) unstable; urgency=low
+
+  * Apply all quilt patches and reset quilt
+
+ -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
 mg3a (171227-1) unstable; urgency=low
 
   * Align with FreeBSD port and OSX Brew personal tap
 
- -- Pedro A. Aranda <paag@unknown>  Tue, 14 Nov 2017 14:11:24 +0100
+ -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
 mg3a (171122-1) unstable; urgency=low
 
   * normalise patch series, include PIPEIN as an option
 
- -- Pedro A. Aranda <paag@unknown>  Tue, 14 Nov 2017 14:11:24 +0100
+ -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
 mg3a (171114-1) unstable; urgency=low
 
   * add SEARCHSIMPLE
 
- -- Pedro A. Aranda <paag@unknown>  Tue, 14 Nov 2017 14:11:24 +0100
+ -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
 
 mg3a (170703-1) unstable; urgency=low
 
   * pipein moved to file.c and fileio.c. No need for temporal files anymore
 
- -- Pedro A. Aranda <paag@unknown>  Thu, 16 Feb 2017 19:02:59 +0100
+ -- Pedro A. Aranda <paag@gmail.com>  Thu, 16 Feb 2017 19:02:59 +0100
 
 mg3a (170622-1) unstable; urgency=low
 
   * pipein support. Development with quilt started
 
- -- Pedro A. Aranda <paag@unknown>  Thu, 16 Feb 2017 19:02:59 +0100
+ -- Pedro A. Aranda <paag@gmail.com>  Thu, 16 Feb 2017 19:02:59 +0100
 
 mg3a (170403-1) unstable; urgency=low
 
-  * shell-command and yank-command support
+  * shell-command and yank-command support (last release by Bengt Larsson)
 
- -- Pedro A. Aranda <paag@unknown>  Thu, 16 Feb 2017 19:02:59 +0100
+ -- Pedro A. Aranda <paag@gmail.com>  Thu, 16 Feb 2017 19:02:59 +0100
 
