--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+mg3a (191206-1) unstable; urgency=low
+
+  * Use autoconf tools to configure
+
+ -- Pedro A. Aranda <paag@gmail.com>  Thu, 07 Nov 2019 06:17:15 +0100
 mg3a (191107-1) unstable; urgency=low
 
   * Integrate RUDIX ncurses patch
