--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+mg3a (201201-1) unstable; urgency=low
+
+  * Include more docs in the packages
+
+ -- Pedro A. Aranda <paag@gmail.com>  Sat, 28 Nov 2020 13:11:25 +0100
 mg3a (201128-1) unstable; urgency=low
 
   * Switch to \e[1000[hl] for mouse on/off
