--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
+mg3a (220529-1) unstable; urgency=low
+
+  * Enable MOUSE on --enable-all
+
+ -- Pedro A. Aranda <paag@gmail.com>  Sun, 29 May 2022 08:05:31 +0200
 mg3a (220528-1) unstable; urgency=low
 
-  * Fix compilartion warning on SEARCHALL
+  * Fix compilation warning on SEARCHALL
 
  -- Pedro A. Aranda <paag@gmail.com>  Sat, 28 May 2022 12:05:19 +0200
 mg3a (211116-1) unstable; urgency=low
