--- a/debian/changelog
+++ b/debian/changelog
@@ -1,118 +1,5 @@
-mg3a (220529-1) unstable; urgency=low
+mg3a (230110-1) UNRELEASED; urgency=medium
 
-  * Enable MOUSE on --enable-all
+  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
- -- Pedro A. Aranda <paag@gmail.com>  Sun, 29 May 2022 08:05:31 +0200
-mg3a (220528-1) unstable; urgency=low
-
-  * Fix compilation warning on SEARCHALL
-
- -- Pedro A. Aranda <paag@gmail.com>  Sat, 28 May 2022 12:05:19 +0200
-mg3a (211116-1) unstable; urgency=low
-
-  * Add comment-line
-
- -- Pedro A. Aranda <paag@gmail.com>  Thu, 21 Oct 2021 18:10:31 +0200
-mg3a (201201-1) unstable; urgency=low
-
-  * Include more docs in the packages
-
- -- Pedro A. Aranda <paag@gmail.com>  Sat, 28 Nov 2020 13:11:25 +0100
-mg3a (201128-1) unstable; urgency=low
-
-  * Switch to \e[1000[hl] for mouse on/off
-  * Add scrolling with mouse wheel
-
- -- Pedro A. Aranda <paag@gmail.com>  Sat, 28 Nov 2020 13:11:25 +0100
-mg3a (201122-1) unstable; urgency=low
-
-  * Try to activate mouse
-  * click to select window
-  * TODO: click to move cursor
-
- -- Pedro A. Aranda <paag@gmail.com>  Sun, 22 Nov 2020 12:11:52 +0100
-mg3a (201120-1) unstable; urgency=low
-
-  * Make make-mode non-default in compilation
-  * Postpone comment-region 
-  * Document comment-line, comment-begin and comment-end
-  * Add latest dot.mg3 to examples
-
- -- Pedro A. Aranda <paag@gmail.com>  Fri, 20 Nov 2020 07:11:57 +0100
-mg3a (201117-1) unstable; urgency=low
-
-  * Make comment delimiters buffer local
-
- -- Pedro A. Aranda <paag@gmail.com>  Sun, 15 Nov 2020 09:11:57 +0100
-mg3a (201115-1) unstable; urgency=low
-
-  * Add make-mode
-
- -- Pedro A. Aranda <paag@gmail.com>  Sun, 15 Nov 2020 09:11:57 +0100
-mg3a (201010-1) unstable; urgency=low
-
-  * Fix handling string variables
-  * Add comment-line
-
- -- Pedro A. Aranda <paag@gmail.com>  Sat, 10 Oct 2020 12:10:59 +0200
-mg3a (191206-1) unstable; urgency=low
-
-  * Use autoconf tools to configure
-
- -- Pedro A. Aranda <paag@gmail.com>  Thu, 07 Nov 2019 06:17:15 +0100
-mg3a (191107-1) unstable; urgency=low
-
-  * Integrate RUDIX ncurses patch
-
- -- Pedro A. Aranda <paag@gmail.com>  Thu, 07 Nov 2019 06:17:15 +0100
-mg3a (191106-1) unstable; urgency=low
-
-  * Change declaration of version in main.c
-  *   Failed to compile on Debian10
-
- -- Pedro A. Aranda <paag@gmail.com>  Wed, 06 Nov 2019 10:11:47 +0100
-mg3a (190113-1) unstable; urgency=low
-
-  * First version of duplicate-line (no undo yet!)
-
- -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
-mg3a (180324-1) unstable; urgency=low
-
-  * Include support for rudix.org OSX packages
-
- -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
-mg3a (180101-1) unstable; urgency=low
-
-  * Apply all quilt patches and reset quilt
-
- -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
-mg3a (171227-1) unstable; urgency=low
-
-  * Align with FreeBSD port and OSX Brew personal tap
-
- -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
-mg3a (171122-1) unstable; urgency=low
-
-  * normalise patch series, include PIPEIN as an option
-
- -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
-mg3a (171114-1) unstable; urgency=low
-
-  * add SEARCHSIMPLE
-
- -- Pedro A. Aranda <paag@gmail.com>  Tue, 14 Nov 2017 14:11:24 +0100
-mg3a (170703-1) unstable; urgency=low
-
-  * pipein moved to file.c and fileio.c. No need for temporal files anymore
-
- -- Pedro A. Aranda <paag@gmail.com>  Thu, 16 Feb 2017 19:02:59 +0100
-mg3a (170622-1) unstable; urgency=low
-
-  * pipein support. Development with quilt started
-
- -- Pedro A. Aranda <paag@gmail.com>  Thu, 16 Feb 2017 19:02:59 +0100
-mg3a (170403-1) unstable; urgency=low
-
-  * shell-command and yank-command support (last release by Bengt Larsson)
-
- -- Pedro A. Aranda <paag@gmail.com>  Thu, 16 Feb 2017 19:02:59 +0100
+ -- Pedro A. Aranda Gutiérrez <paag@unknown>  Tue, 10 Jan 2023 17:47:48 +0100
