--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mg3a (250112-1) UNRELEASED; urgency=medium
+
+  * Fix enable mouse, add support for RPMs, compress READMEs
+
+ -- Pedro A. Aranda Gutiérrez <paaguti@gmail.com> Sun, 12 Jan 2025 16:01:50 +0100
+
 mg3a (230110-1) UNRELEASED; urgency=medium
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
